--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
     "nodemon": "^1.12.1"
   }
 }
