--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "async": "^2.5.0",
+    "aws-sdk": "^2.135.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
+    "minio": "^3.2.1",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "sequelize": "^4.13.6",
